--- a/web/lib/component/application_detail.html
+++ b/web/lib/component/application_detail.html
@@ -1,11 +1,28 @@
-<div  class="thumbnail">
-    <h1>App detail</h1>
-    <a href="#/apps/{{app.uuid}}/artifacts">
-        <img  alt="100%x180" src="data:image/svg+xml;base64,P…vdGV4dD48L2c+PC9nPjwvc3ZnPg==" data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
-    </a>
-    <div class="caption">
-        <h3>{{app.name}}</h3>
-        <p>{{app.description}}</p>
+<div class="media">
+    <div class="media-left">
+        <img class="media-object appDetailIcon" src="{{app.appIcon}}" alt="appIcon">
+    </div>
+    <div class="media-body">
+        <h4 class="media-heading">{{app.name}}</h4>
+        {{app.description}}
+    </div>
+</div>
+<hr/>
+<div class="row">
+    <div class="col-md-6">
+        <accordion-group heading="Lastest Build">
+              <artifact ng-repeat="artifact in applicationsLastestVersion"  artifact="artifact" displayVersion="true"></artifact>
+        </accordion-group>
+    </div>
+</div>
 
+<h2>
+    <small>Versions</small>
+</h2>
+<div class="row">
+    <div class="col-md-6">
+        <accordion-group heading="Dynamic Body Content">
+
+        </accordion-group>
     </div>
 </div>
