--- a/web/lib/component/artifact.html
+++ b/web/lib/component/artifact.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class=".navbar-form">
+    <p><span class="label label-default">{{artifact.name}}</span>
+        <span ng-if="displayVersion" >{{artifact.version}}</span>
+        <small><span class="badge">{{artifact.branch}}</span>  Created: {{artifact.creationDate | date:'mediumDate'}}</small>
+        <br/>
+        <a type="button" class=" btn btn-info glyphicon glyphicon-download" aria-hidden="true"> Download</a>
+        <a type="button" class="btn btn-info glyphicon glyphicon-info-sign"> Info</a>
 
-</body>
-</html>
+    </p>
+</div>
