working in progress

--- a/web/lib/component/application_detail.html
+++ b/web/lib/component/application_detail.html
@@ -21,21 +21,19 @@
 </h2>
 <div class="dropdown">
     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        Dropdown
+        Branch : {{currentSelectedBranch}}
         <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">Separated link</a></li>
+        <li><a href1="#" ng-click="selectFilter('')">All</a></li>
+
+        <li><a href1="#" ng-repeat="branch in allAvailableBranches" ng-click="selectFilter(branch)">{{branch}}</a></li>
     </ul>
 </div>
 <div class="row">
-    <div class="col-md-6">
-        <accordion-group heading="Dynamic Body Content">
-
+    <div class="col-md-6" ng-repeat="sortIdentifier in allSortedIdentifier | filter:currentBranchFilter">
+        <accordion-group heading="{{versionForSortIdentifier(sortIdentifier)}}">
+            <artifact ng-repeat="artifact in groupedArtifacts[sortIdentifier]"  artifact="artifact" displayVersion="false"></artifact>
         </accordion-group>
     </div>
 </div>
