--- a/web/lib/component/application_list.html
+++ b/web/lib/component/application_list.html
@@ -8,7 +8,7 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <a type="button" class="btn btn-info glyphicon glyphicon glyphicon-plus">Create Application</a>
+                    <a type="button" class="btn btn-raised btn-default glyphicon glyphicon glyphicon-plus" ng-click="displayApplicationCreationPopup()">  Create Application</a>
                 </div>
             </div>
 
