--- a/web/lib/component/artifact.html
+++ b/web/lib/component/artifact.html
@@ -1,10 +1,9 @@
 <div class=".navbar-form">
-    <p><span class="label label-default">{{artifact.name}}</span>
+    <p><span class="label label-info ">{{artifact.name}}</span>
         <span ng-if="displayVersion" >{{artifact.version}}</span>
-        <small><span class="badge">{{artifact.branch}}</span>  Created: {{artifact.creationDate | date:'mediumDate'}}</small>
+        <small><span class="badge label-info">{{artifact.branch}}</span> {{artifactSize()}} Mo - Created: {{artifact.creationDate | date:'mediumDate'}}</small>
         <br/>
-        <a type="button" class=" btn btn-info glyphicon glyphicon-download" aria-hidden="true"> Download</a>
-        <a type="button" class="btn btn-info glyphicon glyphicon-info-sign"> Info</a>
-
+        <a type="button" class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Download</a>
+        <a type="button" class="btn btn-raised btn-default"><i class="material-icons">info_outline</i> More ...</a>
     </p>
 </div>
