--- a/web/lib/component/user_login.html
+++ b/web/lib/component/user_login.html
@@ -21,14 +21,11 @@
                     </div>
                 </fieldset>
             </form>
+            <alert ng-if="errorMessage != null" type="errorMessage['type']" close="hideMessage()">{{errorMessage['msg']}}</alert>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" ng-click="loginUser(email,password)" class="btn btn-primary">Login</button>
-
-            <div collapse="isCollapsed" class="modal-footer">
-                <div class="alert alert-danger" role="alert">{{ errorMessage }}</div>
-            </div>
+            <button type="button" ng-class="isHttpLoading ? 'disabled' : ''" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" ng-click="loginUser(email,password)">Login  <span ng-class="isHttpLoading ? 'disabled glyphicon glyphicon-refresh glyphicon-refresh-animate' : ''"></span></button>
         </div>
     </div>
 </div>
