--- a/web/lib/component/application_list.html
+++ b/web/lib/component/application_list.html
@@ -4,24 +4,42 @@
             <ng-view></ng-view>
         </div>
         <div ng-unless="isApplicationSelected" class="container">
-            <h1 class="">Applications </h1>
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="true">
+                    Platform : {{currentSelectedPlatform}}
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href1="#" ng-click="selectFilter('')">All</a></li>
+
+                    <li><a href1="#" ng-repeat="platform in allPlatforms"
+                           ng-click="selectFilter(platform)">{{platform}}</a></li>
+                </ul>
+            </div>
+
 
             <div class="row">
                 <div class="col-md-6">
-                    <a type="button" class="btn btn-raised btn-default glyphicon glyphicon glyphicon-plus" ng-click="displayApplicationCreationPopup()">  Create Application</a>
+                    <a type="button" class="btn btn-raised btn-default glyphicon glyphicon glyphicon-plus"
+                       ng-click="displayApplicationCreationPopup()"> Create Application</a>
                 </div>
             </div>
-
+            <alert ng-if="errorMessage != null" type="errorMessage['type']" close="hideMessage()">
+                {{errorMessage['msg']}}
+            </alert>
             <div class="row">
-                <div class="col-xs-6 col-md-3" ng-repeat="app in allApps">
-                    <div  class="thumbnail">
+                <div class="col-xs-6 col-md-3" ng-repeat="app in allApps | filter:{platform:currentPlatformFilter}">
+                    <div class="thumbnail">
                         <a href1="#/apps/{{app.uuid}}/artifacts" ng-click="appSelected(app.uuid)">
-                            <img  alt="100%x180" src="{{app.appIcon}}" data-holder-rendered="true" class="img-rounded">
+                            <img alt="100%x180" src="{{app.appIcon}}" data-holder-rendered="true" class="img-rounded">
                         </a>
+
                         <div class="caption">
                             <h3 class="truncated_text">{{app.name}}</h3>
+
                             <p class="truncated_text">{{app.description}}</p>
-                          <!--   <a ng-if="canAdminApp(app)" href="#" class="btn btn-primary" role="button">Button</a> -->
+                            <!--   <a ng-if="canAdminApp(app)" href="#" class="btn btn-primary" role="button">Button</a> -->
                         </div>
                     </div>
                 </div>
