--- a/web/lib/component/application_list.html
+++ b/web/lib/component/application_list.html
@@ -18,9 +18,10 @@
                 </ul>
             </div>
 
-
             <div class="row">
                 <div class="col-md-6">
+                    <a type="button" class="btn btn-raised btn-default"
+                       ng-click="applicationListNeedBeReloaded()"> Refresh</a>
                     <a type="button" class="btn btn-raised btn-default glyphicon glyphicon glyphicon-plus"
                        ng-click="displayApplicationCreationPopup()"> Create Application</a>
                 </div>
@@ -31,14 +32,14 @@
             <div class="row">
                 <div class="col-xs-6 col-md-3" ng-repeat="app in allApps | filter:{platform:currentPlatformFilter}">
                     <div class="thumbnail">
-                        <a href1="#/apps/{{app.uuid}}/artifacts" ng-click="appSelected(app.uuid)">
+                        <a class="" href1="#/apps/{{app.uuid}}/artifacts" ng-click="appSelected(app.uuid)">
                             <img alt="100%x180" src="{{app.appIcon}}" data-holder-rendered="true" class="img-rounded">
+                                <span class="platform{{app.platform}}"></span>
+                            </img>
                         </a>
-
                         <div class="caption">
                             <h3 class="truncated_text">{{app.name}}</h3>
-
-                            <p class="truncated_text">{{app.description}}</p>
+                            <h6 class="truncated_text">{{app.description}}</h6>
                             <!--   <a ng-if="canAdminApp(app)" href="#" class="btn btn-primary" role="button">Button</a> -->
                         </div>
                     </div>
