--- a/web/lib/component/artifact.html
+++ b/web/lib/component/artifact.html
@@ -5,5 +5,6 @@
         <br/>
         <a type="button" class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Download</a>
         <a type="button" class="btn btn-raised btn-default"><i class="material-icons">info_outline</i> More ...</a>
+        <button type="button" ng-if="canDelete" class="btn btn-xs btn-flat btn-danger"><i class="material-icons">delete</i> Delete</button>
     </p>
 </div>
