--- a/web/lib/component/application_list.html
+++ b/web/lib/component/application_list.html
@@ -33,8 +33,7 @@
                 <div class="col-xs-6 col-md-3" ng-repeat="app in allApps | filter:{platform:currentPlatformFilter}">
                     <div class="thumbnail">
                         <a class="" href1="#/apps/{{app.uuid}}/artifacts" ng-click="appSelected(app.uuid)">
-                            <img data-src="holder.js/300x200"/>
-                            <img alt="100%x180" ng-src="{{iconForApp(app)}}" data-holder-rendered="true" class="img-rounded">
+                            <img alt="100%x180" src="{{app.appIcon}}" data-holder-rendered="true" class="img-rounded">
                                 <span class="platform{{app.platform}}"></span>
                             </img>
                             <div class="caption">
