--- a/web/lib/component/artifact.html
+++ b/web/lib/component/artifact.html
@@ -1,7 +1,8 @@
 <div class=".navbar-form">
-    <p><span class="label label-info ">{{artifact.name}}</span>
+    <p><span class="badge label-info ">{{artifact.name}}</span>
         <span ng-if="displayVersion" >{{artifact.version}}</span>
-        <small><span class="badge label-info">{{artifact.branch}}</span> {{artifactSize()}} Mo - Created: {{artifact.creationDate | date:'mediumDate'}}</small>
+        <!-- <span class="badge label-info">{{artifact.branch}}</span> -->
+        <span><small> {{artifactSize()}} Mo - Created: {{artifact.creationDate | date:'mediumDate'}}</small></span>
         <br/>
         <a type="button" ng-click="downloadArtifact()" ng-unless="canInstall" class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Download</a>
         <a type="button" ng-click="installArtifact()" ng-if="canInstall" class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Install</a>
