--- a/web/lib/component/artifact.html
+++ b/web/lib/component/artifact.html
@@ -6,7 +6,10 @@
         <br/>
         <a type="button" ng-click="downloadArtifact()" ng-unless="canInstall" class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Download</a>
         <a type="button" ng-click="installArtifact()" ng-if="canInstall" class=" btn btn-raised btn-default" aria-hidden="true"><i class="material-icons">file_download</i> Install</a>
-        <a type="button" class="btn btn-raised btn-default"><i class="material-icons">info_outline</i> More ...</a>
+        <a type="button" ng-click="isCollapsed = !isCollapsed" class="btn btn-raised btn-default"><i class="material-icons">info_outline</i> More ...</a>
         <button type="button" ng-click="deleteArtifact()" ng-if="canDelete" class="btn btn-xs btn-flat btn-danger"><i class="material-icons">delete</i> Delete</button>
+        <div collapse="isCollapsed">
+        <span ng-repeat="key in metaDataKeys"><small>{{key}} - {{artifact.metaDataTags[key]}}</small><br/></span>
+        </div>
     </p>
 </div>
