--- a/web/lib/component/account_activation.html
+++ b/web/lib/component/account_activation.html
@@ -1,8 +1,14 @@
-<div class="bs-component">
-    <div class="jumbotron">
-        <div class="container">
-            <h1 class="">Account activation </h1>
-            <activation></activation>
-        </div>
-    </div>
+<div ng-unless="isHttpLoading" class="container">
+    <h2  ng-if="activationError">
+        <p> A error occured on activation </p>
+        <p  ng-if="errorMessage!=null">
+            Reason : {{errorMessage}}
+        </p>
+    </h2>
+    <h2  ng-unless="activationError">
+        Activation successul ! You can now login
+    </h2>
+</div>
+<div ng-if="isHttpLoading" class="container">
+    <h1>Loading <span ng-class="isHttpLoading ? 'disabled glyphicon glyphicon-refresh glyphicon-refresh-animate' : ''"></span></h1>
 </div>
