--- a/web/lib/component/account_activation.html
+++ b/web/lib/component/account_activation.html
@@ -6,7 +6,7 @@
         </p>
     </h2>
     <h2  ng-unless="activationError">
-        Activation successul ! You can now login
+        Activation successful ! You can now login
     </h2>
 </div>
 <div ng-if="isHttpLoading" class="container">
