--- a/web/lib/component/application_list.html
+++ b/web/lib/component/application_list.html
@@ -1,5 +1,6 @@
-<div class="bs-component">
-    <div class="jumbotron">
+<div class="col-lg-12">
+<div class="panel panel-default">
+    <div class="panel-body">
         <div ng-if="isApplicationSelected">
             <ng-view></ng-view>
         </div>
@@ -48,3 +49,4 @@
         </div>
     </div>
 </div>
+    </div>
