--- a/web/lib/component/user_login.html
+++ b/web/lib/component/user_login.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-body">
-            <form class="form-horizontal">
+            <form class="form-horizontal" ng-submit="login()">
                 <fieldset>
                     <legend>Login</legend>
                     <div class="form-group" >
@@ -20,12 +20,14 @@
                         </div>
                     </div>
                 </fieldset>
+                <alert ng-if="errorMessage != null" type="errorMessage['type']" close="hideMessage()">{{errorMessage['msg']}}</alert>
+                <div class="modal-footer">
+                    <button type="button" ng-class="isHttpLoading ? 'disabled' : ''" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Login  <span ng-class="isHttpLoading ? 'disabled glyphicon glyphicon-refresh glyphicon-refresh-animate' : ''"></span></button>
+                </div>
             </form>
-            <alert ng-if="errorMessage != null" type="errorMessage['type']" close="hideMessage()">{{errorMessage['msg']}}</alert>
+
         </div>
-        <div class="modal-footer">
-            <button type="button" ng-class="isHttpLoading ? 'disabled' : ''" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" ng-click="loginUser(email,password)">Login  <span ng-class="isHttpLoading ? 'disabled glyphicon glyphicon-refresh glyphicon-refresh-animate' : ''"></span></button>
-        </div>
+
     </div>
 </div>
