--- a/web/lib/component/user_login.html
+++ b/web/lib/component/user_login.html
@@ -8,7 +8,7 @@
                         <label for="inputEmail" class="col-lg-2 control-label">Email</label>
 
                         <div class="col-lg-10">
-                            <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="email">
+                            <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="email" autofocus>
                         </div>
                     </div>
                     <div class="form-group">
