--- a/web/lib/component/users_administration.html
+++ b/web/lib/component/users_administration.html
@@ -5,10 +5,10 @@
             <div class="container">
             <nav>
                 <ul class="pagination navbar-form navbar-left">
-                    <li ng-class="currentPage>1 ? '' : 'disabled'"><a href1="#" ng-click="previous()" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                    <li ng-class="currentPage>1 ? '' : 'disabled'"><a href="javascript:void(0)" ng-click="previous()" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
                     <li ><a>{{currentPage}} <span class="sr-only">(current)</span></a></li>
                     <li ng-class="hasMore ? '' : 'disabled'">
-                        <a href1="#" ng-click="next()" aria-label="Next">
+                        <a href="javascript:void(0)" ng-click="next()" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
