--- a/web/lib/component/user_detail.css
+++ b/web/lib/component/user_detail.css
@@ -1,3 +1,4 @@
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css");
 @import url("../../css/material.min.css");
+@import url("../../css/mdt.css");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
