--- a/web/css/mdt.css
+++ b/web/css/mdt.css
@@ -1,7 +1,3 @@
-.isSysAdmin { display: none;}
-.isAppAdmin { display: none;}
-.isConnected { display: none;}
-
 .row-height {
     display: table;
     table-layout: fixed;
@@ -19,6 +15,10 @@
 .appDetailIcon {
     width1: 128px;
     height: 128px;
+}
+
+.brandIcon {
+    height: 32px;
 }
 
 .platformAndroid {
@@ -57,4 +57,36 @@
 @keyframes spin {
     from { transform: scale(1) rotate(0deg);}
     to { transform: scale(1) rotate(360deg);}
+}
+
+.ribbon {
+    background-color: #a00;
+    overflow: hidden;
+    white-space: nowrap;
+    /* top left corner */
+    position: absolute;
+    left: -50px;
+    top: 00px;
+    /* 45 deg ccw rotation */
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    /* shadow */
+    -webkit-box-shadow: 0 0 10px #888;
+    -moz-box-shadow: 0 0 10px #888;
+    box-shadow: 0 0 10px #888;
+}
+.ribbon a {
+    border: 1px solid #faa;
+    color: #fff;
+    display: block;
+    font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 1px 0;
+    padding: 10px 50px;
+    text-align: center;
+    text-decoration: none;
+    /* shadow */
+    text-shadow: 0 0 5px #444;
 }
