--- a/web/lib/component/application_detail.html
+++ b/web/lib/component/application_detail.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="col-md-6 clearfix">
-            <accordion-group heading="{{versionForSortIdentifier(sortIdentifier)}}" ng-repeat="sortIdentifier in allSortedIdentifier | filter:currentBranchFilter track by $index"
+            <accordion-group heading="{{versionForSortIdentifier(sortIdentifier)}}" ng-repeat="sortIdentifier in allSortedIdentifier | filter:currentBranchFilter"
                              ng-class="$index % 2 == 1 ? '' : 'hidden'">
                 <artifact ng-repeat="artifact in groupedArtifacts[sortIdentifier]"  sortIdentifier="sortIdentifier" artifact="artifact" canDelete="canAdmin()" displayVersion="false"></artifact>
             </accordion-group>
