console logs : working in progress

--- a/web/lib/component/log_console.html
+++ b/web/lib/component/log_console.html
@@ -1,19 +1,17 @@
 <div class="bs-component">
     <div class="jumbotron">
-        <div class="container">
-            <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Log: {{logSelected}}
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href1="#" ng-click="displayConsoleLogs()">Console</a></li>
-                    <li><a href1="#" ng-click="displayActivityLogs()">Activity</a></li>
-                </ul>
-            </div>
+        <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Logs: {{logSelected}}
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <li><a href1="#" ng-click="displayConsoleLogs()">Console</a></li>
+                <li><a href1="#" ng-click="displayActivityLogs()">Activity</a></li>
+            </ul>
         </div>
-        <div class="dropdown" style="overflow:auto">
-            <p>{{logLines}}</p>
+        <div style="background-color: #00a9bb;min-height: 50px;">
+            <xmp>{{logLines}}</xmp>
         </div>
     </div>
 </div>
