console logs : working in progress

--- a/web/lib/component/log_console.html
+++ b/web/lib/component/log_console.html
@@ -1,6 +1,7 @@
 <div class="bs-component">
     <div class="jumbotron">
         <div class="dropdown">
+            <h2>Server Logs</h2>
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 Logs: {{logSelected}}
                 <span class="caret"></span>
@@ -9,8 +10,11 @@
                 <li><a href1="#" ng-click="displayConsoleLogs()">Console</a></li>
                 <li><a href1="#" ng-click="displayActivityLogs()">Activity</a></li>
             </ul>
+            <a type="button" class="btn btn-raised btn-default"
+               ng-click="reloadLogs()"> <i class="material-icons">refresh</i></a>
+
         </div>
-        <div style="background-color: #00a9bb;min-height: 50px;">
+        <div style="background-color: #00a9bb;height:800px;overflow: scroll">
             <xmp>{{logLines}}</xmp>
         </div>
     </div>
