console logs done

--- a/web/lib/component/log_console.html
+++ b/web/lib/component/log_console.html
@@ -14,7 +14,7 @@
                ng-click="reloadLogs()"> <i class="material-icons">refresh</i></a>
 
         </div>
-        <div style="background-color: #00a9bb;height:800px;overflow: scroll">
+        <div style="background-color: #00a9bb;height:400px;overflow: scroll;resize: both;">
             <xmp>{{logLines}}</xmp>
         </div>
     </div>
